<resources>
    <string name="app_name">Code Simulator</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next">Next</string>
    <string name="new_game">New game</string>
    <string name="continue_game">Continue game</string>
    <string name="level_name">Level name</string>
    <string name="player_name">Player name</string>
    <string name="hacker_simulator">Hacker simulator</string>
    <string name="proger_simulator">Proger simulator</string>
    <string name="create">Create</string>
    <string name="fields_not_empty">Fields mustn\'t be empty</string>
    <string name="error">Error</string>
    <string name="notebook">Notebook</string>
    <string name="remove_q">Remove?</string>
    <string name="title_activity_notebook_viewer">Notebook viewer</string>
    <string name="settings">Settings</string>
    <string name="default_start" translatable="false">s1a1.xml</string>
</resources>
